[package]
name = "warcmutex"
version = "1.0.2"
edition = "2021"
authors = ["PFP <patrickfp93@gmail.com>"]
description = "A crate in Rust that provides an attribute macro for mods, structs and impls. Rewrite code using under the hood asynchronous reference (Arc) and asynchronous mutation (Mutex) control elements."
license = "MIT"
repository = "https://github.com/patrickfp93/warcmutex"
keywords = ["crate", "async", "asynchronous", "mutex", "atomic", "concurrency", "multithreading", "thread-safe", "macro", "attribute", "wrapper", "synchronization", "parallelism", "lock", "concurrent", "async-await", "reference counting", "thread safety", "data sharing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.26", features = ["full"] }
synstructure = "0.13.0"
